--- a/02_css/230127ex1.css
+++ b/02_css/230127ex1.css
@@ -1,3 +1,3 @@
-@import url("./과제1_span.css");
+@import url("./230127ex1_2.css");
 p{color: white; background-color: red;}
 h3{color: white; background-color: black;}
