--- a/02_css/overwatch.css
+++ b/02_css/overwatch.css
@@ -1,14 +1,14 @@
-body{background: url(./images/bg.jpg) no-repeat;}
+body{background: url(./images/bg.jpg); background-attachment: fixed;}
 
-.container{display: flex; margin-top: 20px;}
+.container{margin-top: 20px; width: 100%;}
 
-.heroes{width: 700px; display: flex; flex-wrap: wrap; justify-content: center;margin: auto; }
+.heroes{max-width: 700px; display: flex; flex-wrap: wrap; justify-content: center; margin: auto; }
 
 .hero{width: 80px; height: 90px; margin: 4px; border: 3px solid white; transform: skew(-14deg); border-radius: 10px; background-color: gray; overflow: hidden;}
 
 .hero:hover{background-color: orange; border-color: orange; transform: skew(-14deg) scale(1.3); transition: transform 0.1s, background-color 0.5s, border-color 0.5s; z-index: 1; cursor: pointer;}
 
-.image{width: 140%; height: 100%; background-position: center; background-repeat: no-repeat; background-size: cover;transform: skew(14deg) translateX(-10px);}
+.image{width: 140%; height: 100%; background-position: center; background-repeat: no-repeat; background-size: cover; transform: skew(14deg) translateX(-10px);}
  
 .heroes div:nth-child(1) .image{background-image: url(./images/hero1.png);}
 .heroes div:nth-child(2) .image{background-image: url(./images/hero2.png);}
@@ -43,4 +43,6 @@ body{background: url(./images/bg.jpg) no-repeat;}
 .heroes div:nth-child(31) .image{background-image: url(./images/hero31.png);}
 .heroes div:nth-child(32) .image{background-image: url(./images/hero32.png);}
 
-img{max-width: 300px; margin: auto; display: flex; margin-top: 20px;}
+.container img{max-width: 300px; width: 100%; margin: auto; display: block; margin-top: 20px;}
+
+/*div로 묶어서 container에 display:flex; justify-content: center;*/
