--- a/02_css/overwatch/overwatch.css
+++ b/02_css/overwatch/overwatch.css
@@ -1,4 +1,4 @@
-body{background: url(./images/bg.jpg); background-attachment: fixed;}
+body{background: url(./images/bg.jpg); background-attachment: fixed;}/*background-repeat: no-repeat; ??*/
 
 .container{margin-top: 20px; width: 100%;}
 
