--- a/04_js/todo/todo.css
+++ b/04_js/todo/todo.css
@@ -1,26 +1,7 @@
-* {
-  margin: 0;
-}
-ul {
-  list-style: none;
-  padding-left: 0;
-}
-.header {
-  background-color: lavender;
-  height: 60px;
-}
-.header h1 {
-  text-align: center;
-  line-height: 60px;
-}
-.contents {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-}
-.input-part {
-  padding: 30px 0px;
-}
-.list-part .todo-list {
-  text-align: center;
-}
+* {margin: 0;}
+ul {list-style: none; padding-left: 0;}
+.header {background-color: lavender; height: 60px;}
+.header h1 {text-align: center; line-height: 60px;}
+.contents {display: flex; flex-direction: column; align-items: center;}
+.input-part {padding: 30px 0px;}
+.list-part .todo-list {text-align: center;}
